<resources>
    <string name="app_name">Rezq</string>
    <string name="search">Search for offers,categories etc.</string>
    <string name="popular_category">Popular Categories</string>
    <string name="seeall">SEE ALL</string>
    <string name="food">Food</string>
    <string name="bar">BAR</string>
    <string name="travel">TRAVEL</string>
    <string name="cinema">CINEMA</string>
    <string name="welcome">WELCOME</string>
    <string name="enter_mobileno">Enter mobile number</string>
    <string name="otpverify">OTP Verification</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="resendotp">Resend OTP</string>
    <string name="verify">VERIFY OTP</string>
    <string name="createnewaccount">Create a new <br></br>account</string>
    <string name="firstname">First name</string>
    <string name="enter_your_name">enter first name</string>
    <string name="lastname">Last name</string>
    <string name="enter_lastname">enter last name</string>
    <string name="contact">Contact</string>
    <string name="enter_contact">contact number</string>
    <string name="email">Enter Email ID</string>
    <string name="enter_email">enter  email ID</string>
    <string name="signup">CONTINUE</string>
    <string name="freemember">Free Member</string>
    <string name="upgrade">Upgrade</string>
    <string name="home">Home</string>
    <string name="coupon">Recent Coupons</string>
    <string name="favourite">Favourites</string>
    <string name="membership">Membership</string>
    <string name="accounts">Accounts</string>
    <string name="logout">Logout</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="currentlocation">Current Location</string>
    <string name="trending_now">Trending Now</string>
    <string name="popular_places">Popular places near you</string>
    <string name="get_extra">Become a prime member &amp; unlock exciting offers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rezq_mem">Rezq plus</string>
    <string name="from_to">From Mar 10 - Jun 10</string>
    <string name="free_membership">Currently you have</string>
    <string name="membership_free">Free membership</string>
    <string name="validity">Validity</string>
    <string name="days_left">360 Days left</string>
    <string name="valid_from">Valid from</string>
    <string name="valid_to">Valid till</string>
    <string name="date_from">12 Aug 2021</string>
    <string name="day_to">24 Aug 2022</string>
    <string name="upgrate_to_premium">Upgrade Membership</string>
    <string name="unblock_offer">Unlock best offers</string>
    <string name="subscribe">Subscribe</string>
    <string name="sar">Sar </string>
    <string name="create_familacc">Create family account</string>
    <string name="plus_previlegs">Plus privileges</string>
    <string name="nearby_km">Nearby distance 100km</string>
    <string name="get_offer">Get best offers before others</string>
    <string name="unblock_daily">Unlock 2 deals a day</string>
    <string name="marina">Carlucciao\'s- Dubai Marina mall</string>
    <string name="off_percent"></string>
    <string name="dubai_mall">Urban Bar <br></br>Kitchen- UBK</string>
    <string name="al_qaim">Al Mansalauun</string>
    <string name="drink_on">First drink on the house</string>
    <string name="pizza">Broccoli pizza &amp; pasta</string>
    <string name="off">50% off</string>
    <string name="buy_one_get">Buy 1 get 1</string>
    <string name="reedemoffer">Redeem offer</string>
    <string name="enter_vendorcode">Please enter vendor verification code.</string>
    <string name="reedm">Redeem</string>
    <string name="reating">Ratings</string>
    <string name="happy_hourse">Happy hours</string>
    <string name="buy_two_get_one">Buy 2 and get one drink free</string>
    <string name="applicable_onselectitem">Applicable on selected items</string>
    <string name="code_coupon">KQI2817KD</string>
    <string name="show_reception">Please show this at the reception</string>
    <string name="copy_coupon">Copy Coupon code</string>
    <string name="unlock_raza">Unlock with Rezq Plus</string>
    <string name="upto_50_off">Upto 50% off on special items</string>
    <string name="premium_members_only">Available for premium members only</string>
    <string name="reedemoffer2">REDEEM OFFER </string>
    <string name="save_in_recent">Save in recent</string>
    <string name="rate_your_exp">Rate your experience at</string>
    <string name="comments">Comments (optional)</string>
    <string name="submit">submit</string>
    <string name="all_locked_offer">All locked Offers</string>
    <string name="rezq_plus_offer">Rezq Plus offers</string>
    <string name="prime_members">Become a prime member<br></br>To unlock offers</string>
    <string name="prime_offer">Rezq prime offers</string>
    <string name="dinner">Dinner | Takeaway | Bar</string>
    <string name="dubai_marina">Carlucciaos- Dubai Marina mall</string>
    <string name="Favourite">Favourite</string>
    <string name="address">Address</string>
    <string name="Neque_porro">Neque porro quisquam est qui <br></br>dolorem ipsum quia dolor.</string>
    <string name="open_map">Open map</string>
    <string name="offers">Offers</string>
    <string name="seeall_locked_offer">See all Locked offers</string>
    <string name="ratings">Ratings &amp; Reviews</string>
    <string name="years_ago">7 months ago</string>
    <string name="description">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="popular_foods">Popular in foods</string>
    <string name="most_visited">Most Visited</string>
    <string name="pizza_pasta">Broccoli Pizza &amp; Pasta</string>
    <string name="one_offers">12 offers</string>
    <string name="start_typing">Start typing</string>
    <string name="recent_search">Recent Searches</string>
    <string name="clear">Clear all</string>
    <string name="fishland">Fish Land</string>
    <string name="recent_visited">Recently Visited</string>
    <string name="top_offers">Top offers &amp; deals</string>
    <string name="my_membership">My membership</string>
    <string name="upgrade_membership">Upgrade membership</string>
    <string name="today">Today</string>
    <string name="broklin">Broccoli pizza &amp; pasta</string>
    <string name="yesterday">Yesterday</string>
    <string name="recent">Recent Coupons</string>
    <string name="favourites">Favourites</string>
    <string name="all">All</string>
    <string name="whoisusing">Who is using?</string>
    <string name="select_account">Select the account which you want to access</string>
    <string name="abdul">Abdul</string>
    <string name="add">Add</string>
    <string name="addnewaccount">Add new Account</string>
    <string name="entername">Enter name</string>
    <string name="coninue">Continue</string>
    <string name="phn_erro">Contact number Required</string>
    <string name="password_error">Password Required</string>
    <string name="CannotconnecttoInternet">Check your internet connection</string>
    <string name="Theservercouldnotbefound">There is a problem connecting to servers, please try again later</string>
    <string name="Parsingerror">Parsing error!</string>
    <string name="ConnectionTimeOut">Connection TimeOut!</string>
    <string name="pleasewait">Please wait... <br>while we load your data</br></string>
    <string name="loading">Loading...</string>
    <string name="NetworkError">No Network Available</string>
    <string name="ServerError">Server Response Timeout</string>
    <string name="ServerInternalError">Server Internal Error</string>
    <string name="AuthFailedError">Server Authentication Failed</string>
    <string name="ParseError">Parsing Error</string>
    <string name="NoConnectionError">No Connection available to Host</string>
    <string name="TimeOutError">Server Timeout Error</string>
    <string name="ErrorResponseData">Error Response Data</string>
    <string name="UnknownError">Unknown Error Response</string>
    <string name="UnexpectedResponse">Unexpected response</string>
    <string name="emailNotValid">Email_ID not VALID</string>
    <string name="locationResponseFailure">Location Response Failure</string>
    <string name="not_available">Not Available</string>
    <string name="for_registering">For Registering with us!</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="one_of_our_experts_will_come">One of our experts will come and</string>
    <string name="visit_you">visit you shortly!</string>
    <string name="otp">OTP</string>
    <string name="reject">Reject</string>
    <string name="reject_booking">Reject Booking</string>
    <string name="profile">Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_details">View Details</string>
    <string name="mobile_number_country_code_error_message">Kindly enter a valid </string>
    <string name="mobile_number_digit_error_message">Digit mobile number</string>
    <string name="mobile_number_error_message">Kindly enter a valid mobile number</string>
    <string name="pleaseFillMandatoryDetails">*Please fill mandatory fields</string>
    <string name="pleaseFillpassword">*Please Give Password</string>
    <string name="pleaseFillmobileNo">*Please Give Mobile Number</string>
    <string name="massage_type">Massage_Type</string>
    <string name="digit_mobile_number">Please enter the valid mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="city">City</string>
    <string name="change">Change</string>
    <string name="changePassword">Change password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwordNotMatched">Password entered mismatched </string>
    <string name="passwordContainsError">*Password Should be minimum 6 characters length.</string>
    <string name="phoneNONotValid">*Phone no Not Valid</string>
    <string name="check_terms_and_condition">*please check terms and conditions to proceed</string>
    <string name="your_old_password">Your Old Password</string>
    <string name="want_to_change_password">On changing password you will be logged out from all the devices. Do you want to continue ?</string>
    <string name="user">User</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="select_location">Select location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'YIN\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="image_convertion_error">Selected image cannot be converted.</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="logingin">Logging in...</string>
    <string name="logingout">Logging out...</string>
    <string name="registering">Signing up...</string>
    <string name="getting_profile">Retrieving profile...</string>
    <string name="updatingProfile">Updating profile...</string>
    <string name="account">Account</string>
</resources>