<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:visible="false"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_recentCoupon"
        android:icon="@drawable/history"
        android:title="@string/coupon" />
    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/like"
        android:title="@string/favourite" />
    <item
        android:id="@+id/nav_membership"
        android:icon="@drawable/credit_card"
        android:title="@string/membership" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/user"
        android:title="@string/account" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>