<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvHappyhr"
        android:layout_width="52dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/happy_hourse"
        android:background="@drawable/hours_border"
        android:layout_height="52dp" />
    <TextView
        android:id="@+id/buyone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/tvHappyhr"
        android:textColor="#171717"
        android:textSize="16dp"
        android:text="@string/buy_two_get_one"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvHappyhr"
        android:textColor="#898989"
        android:layout_marginLeft="20dp"
        android:textSize="12dp"
        android:text="@string/applicable_onselectitem"
        android:layout_below="@id/buyone"/>

</RelativeLayout>