<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar_detail" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rezqplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/iv_membership_image"
                android:layout_width="326dp"
                android:layout_height="181dp"
                android:src="@drawable/reqq_plus" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lnrMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rezqplus"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.sa.rezq.view.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/membership"
                        android:layout_gravity="center"
                        android:textColor="#3B3B3B"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <com.sa.rezq.view.AppTextView
                        android:id="@+id/tv_membership_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/rezq_mem"
                        android:textColor="#171717"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:orientation="vertical">

                    <com.sa.rezq.view.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/validity"
                        android:layout_gravity="center"
                        android:textColor="#3B3B3B"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <com.sa.rezq.view.AppTextView
                        android:id="@+id/tv_validity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/days_left"
                        android:textColor="#171717"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.sa.rezq.view.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valid_from"
                        android:layout_gravity="center"
                        android:textColor="#3B3B3B"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <com.sa.rezq.view.AppTextView
                        android:id="@+id/tv_valid_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/date_from"
                        android:textColor="#171717"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:orientation="vertical">

                    <com.sa.rezq.view.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valid_to"
                        android:layout_gravity="center"
                        android:textColor="#3B3B3B"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <com.sa.rezq.view.AppTextView
                        android:id="@+id/tv_valid_till"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/day_to"
                        android:textColor="#171717"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <com.sa.rezq.view.AppTextView
            android:visibility="gone"
            android:id="@+id/Tv_upgradeTo_Prime"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnrMain"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text="@string/upgrate_to_premium"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="14dp"
            android:textStyle="bold" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>